[project]
name = "gitgud"
version = "0.1.0"
description = "Git Gud brings Dark Souls to programming. Are you brave enough?"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
gitgud = "gitgud:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
typeCheckingMode = "recommended"
reportUnusedCallResult = false
